[package]
name = "evm-ds"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
clap = { version = "3.1.6", features = ["derive"] }
env_logger = "0.9.0"
evm = { version = "0.35.0", features = ["with-serde", "tracing"] }
futures = "0.3.21"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc"] }
jsonrpc-derive = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-http-server = "18.0.0"
hex = "0.4"
log = "0.4.16"
primitive-types = { version = "0.11.1", features = ["serde"] }
protobuf = { version = "2.27.1",  features = ["with-bytes"] }
tokio = { version = "1.17", features = ["full"] }

[build-dependencies]
protoc-rust = "2"
